--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -80,3 +80,7 @@
     </div>
     
     <hr style="color: black; width: 5px;">
+      </div>
+
+  <app-guest-reviews [propertyId]="propertyId"></app-guest-reviews>
+</div>
